// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HarnessApproval /> tests Non-Waiting Status form is not shown 1`] = `
<div>
  <div
    class="info"
  >
    <div
      class="reviewMsg"
    >
      Please review the following information and approve the pipeline progression
    </div>
    <div>
      2 of 3 approvals complete
    </div>
  </div>
  <div
    class="harnessApproval"
  >
    <div
      class="approver"
    >
      <div
        class="summary"
      >
        <div
          class="approverName"
        >
          User 1
        </div>
        <div
          class="status"
          data-status="APPROVE"
        >
          <span
            class="bp3-icon bp3-icon-tick StyledProps--main"
            icon="tick"
          >
            <svg
              data-icon="tick"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                tick
              </desc>
              <path
                d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Approved
          </span>
        </div>
        <div>
          DUMMY DATE
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
    <div
      class="approver"
    >
      <div
        class="summary"
      >
        <div
          class="approverName"
        >
          User 2
        </div>
        <div
          class="status"
          data-status="REJECT"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Rejected
          </span>
        </div>
        <div>
          DUMMY DATE
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<HarnessApproval /> tests Waiting Status does not shows form if user is authorized 1`] = `
<div>
  <div
    class="info"
  >
    <div
      class="timer"
    >
      <div>
        MOCK DURATION
      </div>
      <span>
        remaining till timeout
      </span>
    </div>
    <div
      class="reviewMsg"
    >
      Please review the following information and approve the pipeline progression
    </div>
    <div>
      2 of 3 approvals complete
    </div>
  </div>
  <div
    class="harnessApproval"
  >
    <div
      class="approver"
    >
      <div
        class="summary"
      >
        <div
          class="approverName"
        >
          User 1
        </div>
        <div
          class="status"
          data-status="APPROVE"
        >
          <span
            class="bp3-icon bp3-icon-tick StyledProps--main"
            icon="tick"
          >
            <svg
              data-icon="tick"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                tick
              </desc>
              <path
                d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Approved
          </span>
        </div>
        <div>
          DUMMY DATE
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
    <div
      class="approver"
    >
      <div
        class="summary"
      >
        <div
          class="approverName"
        >
          User 2
        </div>
        <div
          class="status"
          data-status="REJECT"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Rejected
          </span>
        </div>
        <div>
          DUMMY DATE
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<HarnessApproval /> tests Waiting Status shows form if user is authorized 1`] = `
<div>
  <div
    class="info"
  >
    <div
      class="timer"
    >
      <div>
        MOCK DURATION
      </div>
      <span>
        remaining till timeout
      </span>
    </div>
    <div
      class="reviewMsg"
    >
      Please review the following information and approve the pipeline progression
    </div>
    <div>
      2 of 3 approvals complete
    </div>
  </div>
  <div
    class="harnessApproval"
  >
    <div
      class="approver"
    >
      <div
        class="summary"
      >
        <div
          class="approverName"
        >
          User 1
        </div>
        <div
          class="status"
          data-status="APPROVE"
        >
          <span
            class="bp3-icon bp3-icon-tick StyledProps--main"
            icon="tick"
          >
            <svg
              data-icon="tick"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                tick
              </desc>
              <path
                d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Approved
          </span>
        </div>
        <div>
          DUMMY DATE
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
    <div
      class="approver"
    >
      <div
        class="summary"
      >
        <div
          class="approverName"
        >
          User 2
        </div>
        <div
          class="status"
          data-status="REJECT"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            Rejected
          </span>
        </div>
        <div>
          DUMMY DATE
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main toggle"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down StyledProps--main"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
    <div
      class="inputs"
    >
      <div
        class="heading"
      >
        Approval inputs
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="approverInputs[0].value"
        >
          var1
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-input-group"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="approverInputs[0].value"
              type="text"
              value="val10"
            />
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="approverInputs[1].value"
        >
          var2
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-input-group"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="approverInputs[1].value"
              type="text"
              value="val20"
            />
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="comments"
        >
          comments
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <textarea
            autocomplete="off"
            class="bp3-input bp3-fill"
            name="comments"
          />
        </div>
      </div>
      <div
        class="actions"
      >
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            <span>
              Approve
            </span>
          </span>
        </button>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            <span>
              Reject
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
